--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
         </form>
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="team.html" class="nav-link">Our team</a></li>
-                <li class="nav-item"><a href="project.html" class="nav-link">Project</a></li>
-                <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                <li class="nav-item active"><a href="#!" class="nav-link">Home</a></li>
+				<li class="nav-item"><a href="#!" class="nav-link" data-id="#menu1"> About </a></li>
+                <li class="nav-item"><a href="#!" class="nav-link" data-id="#menu2"> About </a></li>
+                <li class="nav-item"><a href="#!" class="nav-link" data-id="#menu3"> Project </a></li>
+				<li class="nav-item"><a href="#!" class="nav-link" data-id="#menu4"> Blog </a></li>
+                <li class="nav-item"><a href="#!" class="nav-link" data-id="#menu5"> Help </a></li>
+				<li class="nav-item"><a href="#!" class="nav-link" data-id="#menu6"> Accont </a></li>
+				<li class="nav-item"><a href="#!" class="nav-link" data-id="#menu7"> Contact </a></li>
             </ul>
         </div>
     </div>
@@ -101,7 +103,7 @@
                 </div>
             </div>
         </div>
-
+	<section id="menu1"
         <div class="slider-item" style="background-image:url(images/bg_3.jpg);">
             <div class="overlay"></div>
             <div class="container">
@@ -115,10 +117,12 @@
                 </div>
             </div>
         </div>
+	</section
     </div>
 </div>
 
-<section class="ftco-section ftco-no-pt ftco-no-pb">
+
+<section id="menu1" class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container">
         <div class="row">
             <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
@@ -207,7 +211,7 @@
     </div>
 </section>
 
-<section class="ftco-section ftco-no-pt ftco-no-pb">
+<section id="menu2" class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container">
         <div class="row d-flex no-gutters">
             <div class="col-md-6 d-flex">
@@ -268,7 +272,7 @@
     </div>
 </section>
 
-<section class="ftco-counter" id="section-counter">
+<section id="menu3" class="ftco-counter" id="section-counter">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
@@ -315,7 +319,7 @@
     </div>
 </section>
 
-<section class="ftco-section ftco-no-pt ftco-no-pb">
+<section id="menu4" class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container-fluid px-md-0">
         <div class="row no-gutters">
             <div class="col-md-4 ftco-animate">
@@ -408,7 +412,7 @@
 </section>
 
 
-<section class="ftco-section testimony-section bg-primary">
+<section id="menu5" class="ftco-section testimony-section bg-primary">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
@@ -510,7 +514,7 @@
     </div>
 </section>
 
-<section class="ftco-section">
+<section <section id="menu6" class="ftco-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
@@ -526,7 +530,7 @@
                     </a>
                     <div class="text mt-3 text-center">
                         <div class="meta mb-2">
-                            <div><a href="#">January 30, 2020</a></div>
+                            <div><a href="#">January 30, 2021</a></div>
                             <div><a href="#">Admin</a></div>
                             <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                         </div>
@@ -542,7 +546,7 @@
                     </a>
                     <div class="text mt-3 text-center">
                         <div class="meta mb-2">
-                            <div><a href="#">January 30, 2020</a></div>
+                            <div><a href="#">January 30, 2021</a></div>
                             <div><a href="#">Admin</a></div>
                             <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                         </div>
@@ -558,7 +562,7 @@
                     </a>
                     <div class="text mt-3 text-center">
                         <div class="meta mb-2">
-                            <div><a href="#">January 30, 2020</a></div>
+                            <div><a href="#">January 30, 2021</a></div>
                             <div><a href="#">Admin</a></div>
                             <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                         </div>
@@ -570,9 +574,7 @@
         </div>
     </div>
 </section>
-
-
-<section class="ftco-section ftco-no-pb ftco-no-pt mb-5">
+<section <section id="menu7" class="ftco-section ftco-no-pb ftco-no-pt mb-5">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -580,15 +582,11 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-8 py-4">
                             <div class="row">
-                                <div class="col-md-6 d-flex align-items-center">
-                                    <h2 class="mb-0" style="color:white; font-size: 24px;">Subcribe to our
-                                        Newsletter</h2>
-                                </div>
+
                                 <div class="col-md-6 d-flex align-items-center">
                                     <form action="#" class="subscribe-form">
                                         <div class="form-group d-flex">
-                                            <input type="text" class="form-control" placeholder="Enter email address">
-                                            <input type="submit" value="Subscribe" class="submit px-3">
+
                                         </div>
                                     </form>
                                 </div>
@@ -604,91 +602,8 @@
 <footer class="footer">
     <div class="container-fluid px-lg-5">
         <div class="row">
-            <div class="col-md-9 py-5">
-                <div class="row">
-                    <div class="col-md-4 mb-md-0 mb-4">
-                        <h2 class="footer-heading">About us</h2>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary
-                            regelialia.</p>
-                        <ul class="ftco-footer-social p-0">
-                            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top"
-                                                        title="Twitter"><span class="ion-logo-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top"
-                                                        title="Facebook"><span class="ion-logo-facebook"></span></a>
-                            </li>
-                            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top"
-                                                        title="Instagram"><span class="ion-logo-instagram"></span></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="row justify-content-center">
-                            <div class="col-md-12 col-lg-10">
-                                <div class="row">
-                                    <div class="col-md-4 mb-md-0 mb-4">
-                                        <h2 class="footer-heading">Services</h2>
-                                        <ul class="list-unstyled">
-                                            <li><a href="#" class="py-1 d-block">Construction</a></li>
-                                            <li><a href="#" class="py-1 d-block">House Renovation</a></li>
-                                            <li><a href="#" class="py-1 d-block">Painting</a></li>
-                                            <li><a href="#" class="py-1 d-block">Arhictecture Design</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-4 mb-md-0 mb-4">
-                                        <h2 class="footer-heading">About</h2>
-                                        <ul class="list-unstyled">
-                                            <li><a href="#" class="py-1 d-block">Staff</a></li>
-                                            <li><a href="#" class="py-1 d-block">Team</a></li>
-                                            <li><a href="#" class="py-1 d-block">Careers</a></li>
-                                            <li><a href="#" class="py-1 d-block">Blog</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-4 mb-md-0 mb-4">
-                                        <h2 class="footer-heading">Resources</h2>
-                                        <ul class="list-unstyled">
-                                            <li><a href="#" class="py-1 d-block">Security</a></li>
-                                            <li><a href="#" class="py-1 d-block">Global</a></li>
-                                            <li><a href="#" class="py-1 d-block">Charts</a></li>
-                                            <li><a href="#" class="py-1 d-block">Privacy</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-md-5">
-                    <div class="col-md-12">
-                        <p class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                            All rights reserved | This template is made with <i class="ion-ios-heart"
-                                                                                aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib.com</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                    </div>
-                </div>
-            </div>
             <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
-                <h2 class="footer-heading">Request A Quote</h2>
-                <form action="#" class="contact-form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Subject">
-                    </div>
-                    <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="3" class="form-control"
-                                  placeholder="Message"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="form-control submit px-3">Send</button>
-                    </div>
-                </form>
+                <h4 class="footer-heading">Sayt 2021 yilda yasaldi</h4>
             </div>
         </div>
     </div>
