--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <div class="container pt-5">
     <div class="row justify-content-between">
         <div class="col">
-            <a class="navbar-brand" href="index.html">Ibrohim<span>bratan.</span></a>
+            <a class="navbar-brand" href="index.html">DavrGaz<span>Servis</span></a>
         </div>
         <div class="col d-flex justify-content-end">
             <div class="h3">
                 <p class="mb-0 d-flex">
                     <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-phone"><i
-                            class="sr-only">phone</i> +998999999999 </span></a>
+                            class="sr-only">Номер Телефна</i> +998999999999 </span></a>
 <!--                    <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i-->
 <!--                            class="sr-only">Twitter</i></span></a>-->
 <!--                    <a href="#" class="d-flex align-items-center justify-content-center"><span-->
