--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
 </head>
 <body>
 
-<div class="container pt-5">
+<div class="container py-3">
     <div class="row justify-content-between">
         <div class="col">
             <a class="navbar-brand" href="index.html">DavrGaz<span>Servis</span></a>
         </div>
-        <div class="col d-flex justify-content-end">
-            <div class="h3">
-                <p class="mb-0 d-flex">
-                    <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-phone"><i
-                            class="sr-only">Номер Телефна</i> +998999999999 </span></a>
-<!--                    <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i-->
-<!--                            class="sr-only">Twitter</i></span></a>-->
-<!--                    <a href="#" class="d-flex align-items-center justify-content-center"><span-->
-<!--                            class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>-->
-<!--                    <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-telegram"><i-->
-<!--                            class="sr-only">Dribbble</i></span></a>-->
+        <div class="col d-flex align-self-end justify-content-end">
+            <div class="h5">
+                <p class="mb-0 d-flex row">
+                    <a href="tel:+998974411441" class="col-md-6 col-sm-12 px-3 d-flex align-items-center justify-content-center">
+                        <span class="fa fa-phone">
+                            <i class="sr-only">Номер Телефна</i> +998 (97) 441 14 41
+                        </span>
+                    </a>
+                    <a href="tel:+998994431443" class="col-md-6 col-sm-12 px-3 d-flex align-items-center justify-content-center">
+                        <span class="fa fa-phone">
+                            <i class="sr-only">Номер Телефна</i> +998 (99) 443 14 43
+                        </span>
+                    </a>
                 </p>
             </div>
         </div>
@@ -52,13 +54,13 @@
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span> Menu
         </button>
-        <form action="#" class="searchform order-lg-last">
-            <div class="form-group d-flex">
-                <input type="text" class="form-control pl-3" placeholder="Search">
-                <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span>
-                </button>
-            </div>
-        </form>
+<!--        <form action="#" class="searchform order-lg-last">-->
+<!--            <div class="form-group d-flex">-->
+<!--                <input type="text" class="form-control pl-3" placeholder="Search">-->
+<!--                <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </form>-->
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a href="#!" class="nav-link">Home</a></li>
