--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                         <span class="flaticon-hook"></span>
                     </div>
                     <div class="media-body p-2 mt-3">
-                        <h3 class="heading">Construction</h3>
-                        <p>har qanday sharoitda qurulishni  mukammal darajada yakunlash</p>
+                        <h3 class="heading">Согласование перепланировки</h3>
+                        <p>Согласование перепланировки в Нежилом здании, Согласование перепланировки в Многоквартирном доме</p>
                     </div>
                 </div>
             </div>
@@ -144,9 +144,11 @@
                         <span class="flaticon-skyline"></span>
                     </div>
                     <div class="media-body p-2 mt-3">
-                        <h3 class="heading">House Renovation</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                            unorthographic.</p>
+                        <h3 class="heading">Проектирование</h3>
+                        <p>Снос объектов,
+                            Согласование изменений фасада в нежилом здании,
+                            Согласование изменений фасада в Многоквартирном доме,
+                            Реконструкция</p>
                     </div>
                 </div>
             </div>
@@ -156,9 +158,11 @@
                         <span class="flaticon-stairs"></span>
                     </div>
                     <div class="media-body p-2 mt-3">
-                        <h3 class="heading">Painting</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                            unorthographic.</p>
+                        <h3 class="heading">Кадастровые работы</h3>
+                        <p>Изготовление технических планов,
+                            Изготовление актов обследования,
+                            Заключение кадастрового инженера,
+                            Техническая инвентаризация</p>
                     </div>
                 </div>
             </div>
@@ -168,9 +172,12 @@
                         <span class="flaticon-home"></span>
                     </div>
                     <div class="media-body p-2 mt-3">
-                        <h3 class="heading">Architecture Design</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                            unorthographic.</p>
+                        <h3 class="heading">Пожарная безопасность</h3>
+                        <p>
+                            Расчет пожарных рисков,
+                            Расчет категорий пожароопасности,
+                            Декларация пожарной безопасности,
+                        </p>
                     </div>
                 </div>
             </div>
