--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                 <div class="row no-gutters slider-text align-items-center justify-content-center">
                     <div class="col-md-12 ftco-animate">
                         <div class="text w-100 text-center">
-                            <h2>We're here to help you</h2>
-                            <h1 class="mb-3">gaz planlari</h1>
+                            <h1 class="mb-3">Гарантия качественного обслуживания</h1>
                         </div>
                     </div>
                 </div>
@@ -98,8 +97,7 @@
                 <div class="row no-gutters slider-text align-items-center justify-content-center">
                     <div class="col-md-12 ftco-animate">
                         <div class="text w-100 text-center">
-                            <h2>Best Builder in the World</h2>
-                            <h1 class="mb-3">gaz qurulish</h1>
+                            <h1 class="mb-3">Строгое соблюдение сроков</h1>
                         </div>
                     </div>
                 </div>
@@ -112,8 +110,7 @@
                 <div class="row no-gutters slider-text align-items-center justify-content-center">
                     <div class="col-md-12 ftco-animate">
                         <div class="text w-100 text-center">
-                            <h2>We Build Your Home</h2>
-                            <h1 class="mb-3">Professional tamirlash</h1>
+                            <h1 class="mb-3">Оказание услуг "под ключ"</h1>
                         </div>
                     </div>
                 </div>
@@ -612,7 +609,7 @@
     <div class="container-fluid px-lg-5">
         <div class="row">
             <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
-                <h4 class="footer-heading">Sayt 2021 yilda yasaldi</h4>
+                <h4 class="footer-heading">Сайт 2021 жылы құрылды</h4>
             </div>
         </div>
     </div>
