--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="row no-gutters slider-text align-items-center justify-content-center">
                     <div class="col-md-12 ftco-animate">
                         <div class="text w-100 text-center">
-                            <h1 class="mb-3">Гарантия качественного обслуживания</h1>
+                            <h1 class="mb-3">Проектирование газоснабжения</h1>
                         </div>
                     </div>
                 </div>
@@ -103,25 +103,25 @@
                 </div>
             </div>
         </div>
-	<section id="menu1"
+
         <div class="slider-item" style="background-image:url(images/bg_3.jpg);">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text align-items-center justify-content-center">
                     <div class="col-md-12 ftco-animate">
                         <div class="text w-100 text-center">
-                            <h1 class="mb-3">Оказание услуг "под ключ"</h1>
+                            <h1 class="mb-3">Гарантия качественного обслуживания</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-	</section
+
     </div>
 </div>
 
 
-<section id="menu1" class="ftco-section ftco-no-pt ftco-no-pb">
+<section id="menu1" class="ftco-section ftco-no-pt ftco-no-pb services-sec">
     <div class="container">
         <div class="row">
             <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
@@ -179,41 +179,6 @@
                 </div>
             </div>
         </div>
-        <div class="row no-gutters">
-            <div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
-                <div class="py-3 d-flex">
-                    <div class="icon">
-                        <span class="flaticon-engineer"></span>
-                    </div>
-                    <div class="text">
-                        <h3>Expert &amp; Professional</h3>
-                        <p class="mb-0">Separated they live in. A small river named Duden flows</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
-                <div class="py-3 d-flex">
-                    <div class="icon">
-                        <span class="flaticon-engineer-1"></span>
-                    </div>
-                    <div class="text">
-                        <h3>High Quality Work</h3>
-                        <p class="mb-0">Separated they live in. A small river named Duden flows</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
-                <div class="py-3 d-flex">
-                    <div class="icon">
-                        <span class="flaticon-engineer-2"></span>
-                    </div>
-                    <div class="text">
-                        <h3>24/7 Help Support</h3>
-                        <p class="mb-0">Separated they live in. A small river named Duden flows</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </section>
 
@@ -223,30 +188,30 @@
             <div class="col-md-6 d-flex">
                 <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end"
                      style="background-image:url(images/about.jpg);">
-                    <a href="https://vimeo.com/45830194"
-                       class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-                        <span class="icon-play"></span>
-                    </a>
+<!--                    <a href="https://vimeo.com/45830194"-->
+<!--                       class="icon-video popup-vimeo d-flex justify-content-center align-items-center">-->
+<!--                        <span class="icon-play"></span>-->
+<!--                    </a>-->
                 </div>
             </div>
             <div class="col-md-6 pl-md-5">
                 <div class="row justify-content-start py-5">
                     <div class="col-md-12 heading-section ftco-animate pl-md-4 py-md-4">
-                        <span class="subheading">Welcome to Home Builder</span>
+<!--                        <span class="subheading">Welcome to Home Builder</span>-->
                         <h2 class="mb-4">We create and turn into reality</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
                         <div class="tabulation-2 mt-4">
-                            <ul class="nav nav-pills nav-fill d-md-flex d-block">
-                                <li class="nav-item mb-md-0 mb-2">
-                                    <a class="nav-link active py-2" data-toggle="tab" href="#home1">Our Mission</a>
-                                </li>
-                                <li class="nav-item px-lg-2 mb-md-0 mb-2">
-                                    <a class="nav-link py-2" data-toggle="tab" href="#home2">Our Vision</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#home3">Our Value</a>
-                                </li>
-                            </ul>
+<!--                            <ul class="nav nav-pills nav-fill d-md-flex d-block">-->
+<!--                                <li class="nav-item mb-md-0 mb-2">-->
+<!--                                    <a class="nav-link active py-2" data-toggle="tab" href="#home1">Our Mission</a>-->
+<!--                                </li>-->
+<!--                                <li class="nav-item px-lg-2 mb-md-0 mb-2">-->
+<!--                                    <a class="nav-link py-2" data-toggle="tab" href="#home2">Our Vision</a>-->
+<!--                                </li>-->
+<!--                                <li class="nav-item">-->
+<!--                                    <a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#home3">Our Value</a>-->
+<!--                                </li>-->
+<!--                            </ul>-->
                             <div class="tab-content bg-light rounded mt-2">
                                 <div class="tab-pane container p-0 active" id="home1">
                                     <p>Far far away, behind the word mountains, far from the countries Vokalia and
@@ -417,193 +382,7 @@
     </div>
 </section>
 
-
-<section id="menu5" class="ftco-section testimony-section bg-primary">
-    <div class="container">
-        <div class="row justify-content-center mb-5">
-            <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-                <span class="subheading">Testimonial</span>
-                <h2 class="mb-4">Happy Clients</h2>
-            </div>
-        </div>
-        <div class="row ftco-animate">
-            <div class="col-md-12">
-                <div class="carousel-testimony owl-carousel ftco-owl">
-                    <div class="item">
-                        <div class="testimony-wrap py-4">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-quote-left"></span></div>
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia
-                                    and Consonantia, there live the blind texts.</p>
-                                <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                                    <div class="pl-3">
-                                        <p class="name">Roger Scott</p>
-                                        <span class="position">Marketing Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap py-4">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-quote-left"></span></div>
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia
-                                    and Consonantia, there live the blind texts.</p>
-                                <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                                    <div class="pl-3">
-                                        <p class="name">Roger Scott</p>
-                                        <span class="position">Marketing Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap py-4">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-quote-left"></span></div>
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia
-                                    and Consonantia, there live the blind texts.</p>
-                                <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
-                                    <div class="pl-3">
-                                        <p class="name">Roger Scott</p>
-                                        <span class="position">Marketing Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap py-4">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-quote-left"></span></div>
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia
-                                    and Consonantia, there live the blind texts.</p>
-                                <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                                    <div class="pl-3">
-                                        <p class="name">Roger Scott</p>
-                                        <span class="position">Marketing Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap py-4">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-quote-left"></span></div>
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia
-                                    and Consonantia, there live the blind texts.</p>
-                                <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                                    <div class="pl-3">
-                                        <p class="name">Roger Scott</p>
-                                        <span class="position">Marketing Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section <section id="menu6" class="ftco-section">
-    <div class="container">
-        <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 heading-section text-center ftco-animate">
-                <span class="subheading">Our Blog</span>
-                <h2>Recent Blog</h2>
-            </div>
-        </div>
-        <div class="row d-flex">
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry align-self-stretch">
-                    <a href="blog-single.html" class="block-20 rounded"
-                       style="background-image: url('images/image_1.jpg');">
-                    </a>
-                    <div class="text mt-3 text-center">
-                        <div class="meta mb-2">
-                            <div><a href="#">January 30, 2021</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind
-                            texts</a></h3>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry align-self-stretch">
-                    <a href="blog-single.html" class="block-20 rounded"
-                       style="background-image: url('images/image_2.jpg');">
-                    </a>
-                    <div class="text mt-3 text-center">
-                        <div class="meta mb-2">
-                            <div><a href="#">January 30, 2021</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind
-                            texts</a></h3>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry align-self-stretch">
-                    <a href="blog-single.html" class="block-20 rounded"
-                       style="background-image: url('images/image_3.jpg');">
-                    </a>
-                    <div class="text mt-3 text-center">
-                        <div class="meta mb-2">
-                            <div><a href="#">January 30, 2021</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind
-                            texts</a></h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section <section id="menu7" class="ftco-section ftco-no-pb ftco-no-pt mb-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="bg-primary w-100 rounded px-md-0 px-4">
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-lg-8 py-4">
-                            <div class="row">
-
-                                <div class="col-md-6 d-flex align-items-center">
-                                    <form action="#" class="subscribe-form">
-                                        <div class="form-group d-flex">
-
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<div style="position:relative;overflow:hidden;"><a href="https://yandex.uz/maps/10335/tashkent/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Ташкент</a><a href="https://yandex.uz/maps/10335/tashkent/?ll=69.432998%2C41.376882&utm_medium=mapframe&utm_source=maps&z=18.11" style="color:#eee;font-size:12px;position:absolute;top:14px;">Ташкентская область — Яндекс.Карты</a><iframe class="placement" src="https://yandex.uz/map-widget/v1/-/CCUarSV5HC" width="" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 
 <footer class="footer">
     <div class="container-fluid px-lg-5">
